--- a/FLEX/centering/centering.html
+++ b/FLEX/centering/centering.html
@@ -8,72 +8,66 @@
     <title>Centering</title>
 </head>
 <body>
-    <div class="wraper">
-        <nav>
-            <ul class="ex1">
-                <li class="box-ex1">
-                    <h1>1. Lorem ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
-                </li>
-            </ul>
-        </nav>
-    </div>
+    <div class="wraper-main">
+        <div class="wraper-box">
+                <section class="ex1">
+                    <article class="box-ex1">
+                        <h2>1. Lorem ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
+                    </article>
+                </section>
+        </div>
 
-    <div class="wraper">
-        <nav>
-            <ul class="ex2">
-                <li class="box-ex2-1">
-                    <h1>1. Lorem ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
-                </li>
-                <li>
-                    <h1>2. Lorem ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
-                </li>
-                <li class="box-ex2-3">
-                    <h1>3. Lorem ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
-                </li>
-            </ul>
-        </nav>
-    </div>
+        <div class="wraper-box">
+                <section class="ex2">
+                    <article class="box-ex2-1">
+                        <h2>1. Lorem ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
+                    </article>
+                    <article>
+                        <h2>2. Lorem ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
+                    </article>
+                    <article class="box-ex2-3">
+                        <h2>3. Lorem ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
+                    </article>
+                </section>
+        </div>
 
-    <div class="wraper">
-        <nav>
-            <ul class="ex2">
-                <li class="box-ex2-1">
-                    <h1>1. Lorem ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
-                </li>
-                <li class="box-ex2-2">
-                    <h1>2. Lorem ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
-                </li>
-                <li class="box-ex2-3">
-                    <h1>3. Lorem ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
-                </li>
-            </ul>
-        </nav>
-    </div>
+        <div class="wraper-box">
+                <section class="ex2">
+                    <article class="box-ex2-1">
+                        <h2>1. Lorem ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
+                    </article>
+                    <article class="box-ex2-2">
+                        <h2>2. Lorem ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
+                    </article>
+                    <article class="box-ex2-3">
+                        <h2>3. Lorem ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
+                    </article>
+                </section>
+        </div>
 
-    <div class="wraper">
-        <nav>
-            <ul class="ex3">
-                <li>
-                    <h1>1. Lorem ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
-                </li>
-                <li>
-                    <h1>2. Lorem ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
-                </li>
-                <li>
-                    <h1>3. Lorem ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
-                </li>
-            </ul>
-        </nav>
+        <div class="wraper-box">
+                <section class="ex3">
+                    <article>
+                        <h2>1. Lorem ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
+                    </article>
+                    <article>
+                        <h2>2. Lorem ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
+                    </article>
+                    <article>
+                        <h2>3. Lorem ipsum dolor.</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. lure, illo atque amet incidunt, est doloremque quos. Presentium provident, quis distinctio.</p>
+                    </article>
+                </section>
+        </div>
     </div>
 </body>
 </html>
