--- a/FLEX/navigation/navigation_3.html
+++ b/FLEX/navigation/navigation_3.html
@@ -8,24 +8,14 @@
     <title>Navigation_ex3</title>
 </head>
 <body>
-    <div class="wraper">
-        <h1 class="title">Site Title</h1>
+    <header class="wraper">
+        <a href="#"><h2>Site Title</h2></a>
         <nav>
-            <ul class="nav">
-                <li>
-                    <a href="#">Item 1</a>
-                </li>
-                <li>
-                    <a href="#">Item 2</a>
-                </li>
-                <li>
-                    <a href="#">Item 3</a>
-                </li>
-                <li class="last">
-                    <a href="#">Item 4</a>
-                </li>
-            </ul>
+            <a href="#">Item 1</a>
+            <a href="#">Item 2</a>
+            <a href="#">Item 3</a>
+            <a href="#" class="last">Item 4</a>
         </nav>
-    </div>
+    </header>
 </body>
 </html>
